tests/negative/print_unclosed_index.rkl
(print "${0 unclosed" "arg")
